@@ -27,6 +27,7 @@ Features:
  - Undo-able savestate loading and saving
  - Controller profiles now store shortcut settings
  - Default controller profiles for several common controllers
+ - Libretro now supports BIOS and rumble
 Bugfixes:
  - ARM7: Fix SWI and IRQ timings
  - GBA Audio: Force audio FIFOs to 32-bit
